# Gestura

./: AGENTS.md  LICENSE  README.md  detector.py  index.html  pyproject.toml  server.py  sketch.js
