[project]
name = "gestura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "python-socketio>=5.14.3",
    "uvicorn>=0.38.0",
    "werkzeug>=3.1.3",
]
